--- a/Leave Buddy Lab/Employee/HTML/Employee.html
+++ b/Leave Buddy Lab/Employee/HTML/Employee.html
@@ -9,7 +9,7 @@
     <h1>Employee Details</h1>
     <div class="employee-details">
         <div class="property">
-            <span class="property-label">Name:</span>
+            <span class="property-label">Nama:</span>
             <span class="property-value" id="name"></span>
         </div>
         <div class="property">
